chore: add verification email system for creating an account and loggin in using resend

--- a/nextjs-auth/.env.template
+++ b/nextjs-auth/.env.template
@@ -13,3 +13,6 @@ GITHUB_CLIENT_SECRET=
 # Google oAuth provider
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Resend API key for sending verification emails
+RESEND_API_KEY=
