--- a/nextjs-auth/package.json
+++ b/nextjs-auth/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier-format": "npx prettier . --write",
     "postinstall": "prisma generate"
   },
   "dependencies": {
